crop/discussion/ep-engine/28523/28523_rev2_discussion.txt
DESCRIPTION

MB-100 Fix compilation on gcc 4.8.

Here's the error it produces:

src/atomic.hh: In instantiation of 'void ThreadLocalPtr<T>::operator=(T*) [with T = AtomicPtr<std::queue<SingleThreadedRCPtr<TapConnection>, std::deque<SingleThreadedRCPtr<TapConnection>, std::allocator<SingleThreadedRCPtr<TapConnection> > > > >]':
src/atomic.hh:606:21:   required from 'AtomicPtr<std::queue<T> >* AtomicQueue<T>::initialize() [with T = SingleThreadedRCPtr<TapConnection>]'
src/atomic.hh:613:31:   required from 'std::queue<T>* AtomicQueue<T>::swapQueue(std::queue<T>*) [with T = SingleThreadedRCPtr<TapConnection>]'
src/atomic.hh:514:38:   required from 'void AtomicQueue<T>::push(T&) [with T = SingleThreadedRCPtr<TapConnection>]'
src/tapconnmap.cc:286:45:   required from here
src/atomic.hh:91:21: error: 'set' was not declared in this scope, and no declarations were found by argument-dependent lookup at the point of instantiation [-fpermissive]
         set(newValue);
                     ^
src/atomic.hh:91:21: note: declarations in dependent base 'ThreadLocal<AtomicPtr<std::queue<SingleThreadedRCPtr<TapConnection>, std::deque<SingleThreadedRCPtr<TapConnection>, std::allocator<SingleThreadedRCPtr<TapConnection> > > > >*>' are not found by unqualified lookup
src/atomic.hh:91:21: note: use 'this->set' instead

Change-Id: Ia4dbc0026f954c7f5d799903261abc239b8da6e4
Reviewed-on: http://review.Piper Jefferson.org/28523
Tested-by: Meghan Vazquez xxx@xxx.xxx
Reviewed-by: Abby Duran <Abby xxx@xxx.xxx


COMMENTS

author: Abby Duran
date: 2013-08-23 02:46:08.393000000

Change has been successfully cherry-picked as c55f5ededeeb8bb2bb4a346dc07411bc2b1c0679

-------------------------------------
